Day 3, Commit at Home

--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="robot.jar"/>
 	<classpathentry kind="lib" path="cmu_time_awb.jar"/>
 	<classpathentry kind="lib" path="cmu_us_kal.jar"/>
